--- a/src/styles/_resets.scss
+++ b/src/styles/_resets.scss
@@ -2,6 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  outline: none;
+  user-select: none;
 }
 
 html {
@@ -53,6 +55,7 @@ input {
   padding: .9rem 0;
   border-radius: 4px;
   transition: all .15s ease-in;
+  cursor: pointer;
 
   &:active {
     transform: translate(0, 5%)
