--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,3 +3,16 @@
 @import 'variables';
 @import 'resets';
 @import 'mixins';
+
+.form-inputs {
+  width: 100%;
+  color: $text-light;
+  padding: .7rem 1rem; 
+  border-radius: 4px;
+  border: $brown 1px solid;
+
+  &:focus {
+    background: lighten($brown, 30%);
+    outline: none;
+  }
+}
