--- a/src/styles/_resets.scss
+++ b/src/styles/_resets.scss
@@ -9,7 +9,7 @@
 html {
   height: 100%;
   height: -webkit-fill-available;
-  -webkit-tap-highlight-color: transparentize;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -45,23 +45,4 @@ li, ul {
 input {
   border: none;
   background: none;
-}
-
-.disabled {
-  cursor: not-allowed;
-}
-
-.btns {
-  padding: .9rem 0;
-  border-radius: 4px;
-  transition: all .15s ease-in;
-  cursor: pointer;
-
-  &:active {
-    transform: translate(0, 5%)
-  }
-}
-
-.capitalize {
-  text-transform: capitalize;
 }
