--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,23 @@
     outline: none;
   }
 }
+
+
+.disabled {
+  cursor: not-allowed;
+}
+
+.btns {
+  padding: .9rem 0;
+  border-radius: 4px;
+  transition: all .15s ease-in;
+  cursor: pointer;
+
+  &:active {
+    transform: translate(0, 5%)
+  }
+}
+
+.capitalize {
+  text-transform: capitalize;
+}
