--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,19 +1,22 @@
 $text-dark: #1c1d1f;
 $text-light: #696c6d;
 $border: #dee2e6;
-$bg-light: #f4f4f4;
-$brown: #ce8460;
-$white: #fff;
+
 $indigo: #667eea;
+
+$brown: #ce8460;
+$light-brown: #f7f4f0;
+
+$white: #fff;
+$bg-light: #f4f4f4;
+
 $pink: #ef4767;
+$error: #ff3333;
 
 /* Fonts */
 
 $libre: 'Libre Bodoni';
-$garamond: 'Eb garamond';
 $roboto: 'Roboto';
-$inconsolata: 'Inconsolata';
 $oswald: 'Oswald';
-$dance: 'Dancing script';
 $source: 'Source Sans Pro';
-$nato: 'Noto Sans JP'
+$work: 'work sans';
