--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&family=Dancing+Script:wght@700&family=EB+Garamond:wght@400;500&family=Inconsolata:wght@300&family=Libre+Bodoni&family=Noto+Sans+JP:wght@100&family=Oswald:wght@600&family=Roboto:wght@300&family=Source+Sans+Pro:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Bodoni+Moda:opsz@6..96&family=Dancing+Script:wght@700&family=EB+Garamond:wght@400;500&family=Inconsolata:wght@300&family=Libre+Bodoni&family=Montserrat&family=Noto+Sans+JP:wght@100&family=Open+Sans:ital@1&family=Oswald:wght@600&family=Poppins&family=Roboto:wght@300&family=Source+Sans+Pro:wght@700&family=Work+Sans&display=swap');
 
 @import 'variables';
 @import 'resets';
@@ -16,7 +16,6 @@
     outline: none;
   }
 }
-
 
 .disabled {
   cursor: not-allowed;
