--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,13 +7,17 @@
 .form-inputs {
   width: 100%;
   color: $text-light;
-  padding: .7rem 1rem; 
+  padding: .8rem 1rem; 
   border-radius: 4px;
   border: $brown 1px solid;
 
   &:focus {
     background: lighten($brown, 30%);
     outline: none;
+  }
+
+  @include screen-sm {
+    padding: .7rem 1rem; 
   }
 }
 
