--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,10 @@
   text-transform: capitalize;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .discounted {
   text-decoration: line-through;
 }
