--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,3 +47,11 @@
 .discounted {
   text-decoration: line-through 2px;
 }
+
+ ::-webkit-scrollbar { width: 0; }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
