--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@ $text-dark: #1c1d1f;
 $text-light: #696c6d;
 $border: #dee2e6;
 
+$black: #1d1d1d;
+
 $indigo: #667eea;
 
 $brown: #ce8460;
@@ -12,6 +14,7 @@ $bg-light: #f4f4f4;
 
 $pink: #ef4767;
 $error: #ff3333;
+$success: #388e3c;
 
 /* Fonts */
 
