--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,13 +23,14 @@
 
 .disabled {
   cursor: not-allowed;
+  background: lighten($text-light, 20);
+  color: $bg-light
 }
 
 .btns {
   padding: .9rem 0;
   border-radius: 4px;
   transition: all .15s ease-in;
-  cursor: pointer;
 
   &:active {
     transform: translate(0, 5%)
