--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,10 +10,11 @@ $brown: #ce8460;
 $light-brown: #f7f4f0;
 
 $white: #fff;
-$bg-light: #f4f4f4;
+$bg-light: #FFFDFA;
 
 $pink: #ef4767;
 $error: #ff3333;
+
 $success: #388e3c;
 
 /* Fonts */
