--- a/src/styles/_resets.scss
+++ b/src/styles/_resets.scss
@@ -16,6 +16,10 @@ body {
   font-size: 16px;
   font-family: 'roboto';
   background: $bg-light;
+  -moz-osx-font-smoothing: grayscale; 
+  -webkit-font-smoothing: antialiased; 
+  backface-visibility: hidden;
+ -webkit-backface-visibility: hidden;
 }
 
 button {
