--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,5 +59,8 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
-  margin: 0;
+}
+
+input[type="number"]{
+  -moz-appearance:textfield;
 }
