--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,24 +1,16 @@
+$primary: #FFFDFA;
+$secoundary: #da4453;
+
 $text-dark: #1c1d1f;
 $text-light: #696c6d;
 $border: #dee2e6;
 
-$black: #1d1d1d;
 $indigo: #667eea;
-
-$brown: #ce8460;
-
-$white: #fff;
-$bg-light: #FFFDFA;
-
-$pink: #ef4767;
-$error: #da4453;
-
 $success: #388e3c;
+$black: #1d1d1d;
 
 /* Fonts */
 
-$libre: 'Libre Bodoni';
-$roboto: 'Roboto';
 $oswald: 'Oswald';
-$source: 'Source Sans Pro';
-$work: 'work sans';
+$raleway: 'raleway';
+$roboto: 'Roboto';
